fixed safari quirks on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,8 @@
 body {
   color: black;
   background-color: #fcfcfc;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   margin: 8px 8px;
